WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124777
Fix hit testing for divs with a hierarchy of css transformed and non-transformed elements
https://bugs.webkit.org/show_bug.cgi?id=124777
Summary
Fix hit testing for divs with a hierarchy of css transformed and non-transfor...
Mihai Maerean
Reported
2013-11-22 09:06:26 PST
Created
attachment 217691
[details]
layout test Follow up after bug
https://bugs.webkit.org/show_bug.cgi?id=124647
, with a more complex layout test.
Attachments
layout test
(1.90 KB, text/html)
2013-11-22 09:06 PST
,
Mihai Maerean
no flags
Details
patch
(13.57 KB, patch)
2013-11-22 22:11 PST
,
Mihai Maerean
no flags
Details
Formatted Diff
Diff
patch
(13.84 KB, patch)
2013-12-16 06:44 PST
,
Mihai Maerean
darin
: review+
simon.fraser
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(13.84 KB, patch)
2013-12-17 01:52 PST
,
Mihai Maerean
no flags
Details
Formatted Diff
Diff
patch for landing
(13.84 KB, patch)
2013-12-17 01:54 PST
,
Mihai Maerean
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Mihai Maerean
Comment 1
2013-11-22 22:11:26 PST
Created
attachment 217739
[details]
patch
Ralph T
Comment 2
2013-12-11 16:15:25 PST
I just ran into the regression caused by
r159626
and this patch fixed it for me. It's a fairly severe regression since it breaks all hit testing when mixing Z transformed and non-Z-transformed elements not just hover. Either
r159626
should be reverted or this patch should be landed (if it's OK). Currently trunk is broken for anyone who overlays 2D controls on top of 3D content.
Simon Fraser (smfr)
Comment 3
2013-12-11 16:25:06 PST
Comment on
attachment 217739
[details]
patch I would like the changelog to explain why it's ok to remove the if (m_has3DTransformedDescendant) code.
Mihai Maerean
Comment 4
2013-12-16 06:44:20 PST
Created
attachment 219312
[details]
patch
Darin Adler
Comment 5
2013-12-16 09:40:23 PST
Comment on
attachment 219312
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=219312&action=review
> LayoutTests/transforms/3d/hit-testing/hover-rotated-with-children-negative-z.html:61 > + <p>Test passes if the hover state of a transformed div is activated even if there's a non transfrormed element behind it.</p>
Typo: transfrormed
Mihai Maerean
Comment 6
2013-12-17 01:52:05 PST
Created
attachment 219402
[details]
patch for landing
Mihai Maerean
Comment 7
2013-12-17 01:54:53 PST
Created
attachment 219403
[details]
patch for landing
WebKit Commit Bot
Comment 8
2013-12-17 02:40:37 PST
Comment on
attachment 219403
[details]
patch for landing Clearing flags on attachment: 219403 Committed
r160699
: <
http://trac.webkit.org/changeset/160699
>
WebKit Commit Bot
Comment 9
2013-12-17 02:40:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug